charge to body in overflow

--- a/mediaquries.css
+++ b/mediaquries.css
@@ -1,3 +1,7 @@
+body {
+  overflow-x: hidden;
+}
+
 @media screen and (max-width: 700px) {
   .hamburger {
     display: block;
@@ -75,5 +79,12 @@
 
   .grid-container {
     grid-template-columns: 1fr;
+  }
+
+  .input-container {
+    flex-direction: row;
+  }
+  input[type="email"] {
+    padding-left: 0.5rem;
   }
 }
