--- a/style.css
+++ b/style.css
@@ -13,6 +13,14 @@ html {
   scroll-behavior: smooth;
 }
 
+body {
+  overflow-x: hidden;
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
 :root {
   --bg-clr: #000;
   --text-clr: #fff;
